added h2 index/html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="nav">
-                <!-- <h1>Google <span class="i">I</span> / <div class="o"></div></h1> -->
+                <h1>Google <span class="i">I</span> / <div class="o"></div></h1>
             <ul>
                 <li>Watch</li>
                 <li>Learn</li>
